# myelinate

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/myelinate/: __init__.py  __main__.py  analyze.py  cache.py  cli.py  db.py  detect.py  export.py  extract.py  graph.py  ingest.py  learn.py  models.py
src/myelinate/extract/: __init__.py  code.py  doc.py  image.py  llm.py  paper.py
tests/: conftest.py  test_analyze.py  test_cache.py  test_cli.py  test_detect.py  test_export.py  test_extract_code.py  test_extract_doc.py  test_extract_llm.py  test_graph.py  test_ingest.py  test_learn.py  test_models.py
tests/fixtures/: sample.go  sample.js  sample.py  sample.ts
