[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myelinate"
version = "0.1.0"
description = "Drop files, build a knowledge graph, learn with spaced repetition. Turns Karpathy's /raw folder idea into an active learning system."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "ANUBAV" }]
keywords = ["knowledge-graph", "spaced-repetition", "learning", "cli", "tree-sitter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "networkx>=3.1",
    "graspologic>=3.3",
    "pydantic>=2.0",
    "anthropic>=0.39",
    "tree-sitter>=0.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
myelinate = "myelinate.cli:main"

[project.urls]
Homepage = "https://github.com/ANUBAV/myelinate"
Repository = "https://github.com/ANUBAV/myelinate"
Issues = "https://github.com/ANUBAV/myelinate/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/myelinate"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --tb=short --cov=myelinate --cov-report=term-missing"
